# analytics-api

./: .env  .env.compose  Api.http  Dockerfile  README.md  docker-compose.yml  pyproject.toml
boot/: docker-run.sh
src/: main.py
src/api/db/: config.py  session.py
src/api/events/: __init__.py  models.py  routing.py
